--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
+	"scripts": {
+		"deploy-commands": "node ./scripts/deploy-commands.js",
+		"clear-commands": "node ./scripts/clear-commands.js"
+	},
 	"dependencies": {
 		"axios": "^1.6.2",
-		"bufferutil": "^4.0.8",
 		"discord.js": "^14.14.1",
-		"dotenv": "^16.3.1",
-		"utf-8-validate": "^6.0.3"
+		"dotenv": "^16.3.1"
 	},
 	"devDependencies": {
 		"eslint": "^8.55.0"
+	},
+	"optionalDependencies": {
+		"bufferutil": "^4.0.8",
+		"utf-8-validate": "^6.0.3"
 	}
 }
