--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	},
 	"optionalDependencies": {
 		"bufferutil": "^4.0.8",
-		"utf-8-validate": "^6.0.3"
+		"erlpack": "^0.1.4",
+		"utf-8-validate": "^6.0.3",
+		"zlib-sync": "^0.1.9"
 	}
 }
