--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 		"clear-commands": "node ./scripts/clear-commands.js"
 	},
 	"dependencies": {
-		"axios": "^1.6.2",
 		"discord.js": "^14.14.1",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"undici": "^6.0.1"
 	},
 	"devDependencies": {
 		"eslint": "^8.55.0"
