--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"clear-commands": "node ./scripts/clear-commands.js"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.1.2",
 		"axios": "^1.6.2",
 		"discord.js": "^14.14.1",
 		"dotenv": "^16.3.1"
