--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-	"scripts": {
-		"deploy-commands": "node ./scripts/deploy-commands.js",
-		"clear-commands": "node ./scripts/clear-commands.js"
-	},
-	"dependencies": {
-		"@google/generative-ai": "^0.1.2",
-		"axios": "^1.6.2",
-		"discord.js": "^14.14.1",
-		"dotenv": "^16.3.1"
-	},
-	"devDependencies": {
-		"eslint": "^8.55.0"
-	},
-	"optionalDependencies": {
-		"bufferutil": "^4.0.8",
-		"erlpack": "^0.1.4",
-		"utf-8-validate": "^6.0.3",
-		"zlib-sync": "^0.1.9"
-	}
+  "scripts": {
+    "deploy-commands": "node ./scripts/deploy-commands.js",
+    "clear-commands": "node ./scripts/clear-commands.js"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.1.2",
+    "axios": "^1.6.2",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
+    "zlib-sync": "^0.1.9"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "erlpack": "^0.1.4",
+    "utf-8-validate": "^6.0.3"
+  }
 }
