--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.9",
     "erlpack": "^0.1.4",
-    "utf-8-validate": "^6.0.5",
-    "zlib-sync": "^0.1.9"
+    "utf-8-validate": "^6.0.5"
   }
 }
