--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@google/genai": "^0.7.0",
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "pino": "^9.6.0"
   },
   "devDependencies": {
     "eslint": "^9.23.0"
